<resources>
    <string name="app_name">Sira</string>
    <string name="botao_carteira">Carteira</string>
    <string name="botao_despesa">Adicionar Despesa</string>
    <string name="botao_receita">Adicionar Receita</string>
    <string name="botao_movimentos">Lista de Movimentos</string>
    <string name="botao_ratear">Ratear</string>
    <string name="botao_criar_pastas">Criar Pastas</string>
    <string name="botao_editar_pastas">Editar Pastas</string>
    <string name="descricao_logo">logotipo Porquinho</string>
    <string name="texto_Definicao_das_pastas">Defina seus tipos de pastas e sua porcentagem.</string>

    <!-->



    <string name=""></string>
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>
    <!-->

</resources>
